# price-watch

./: .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  config.example.yaml  pyproject.toml  target.example.yaml
.github/workflows/: docker.yaml  test.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: CrawlTimeBoxPlotChart.tsx  EventBanner.tsx  EventHistory.tsx  FailureTimeseriesChart.tsx  FavoriteButton.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  ItemCard.tsx  ItemDetailPage.tsx  LazyPriceChart.tsx  LoadingSpinner.tsx  MetricsFooter.tsx  MetricsPage.tsx  PeriodSelector.tsx  PermalinkHeading.tsx  PriceChart.tsx  PriceTrendBadge.tsx  SearchBox.tsx  ShareButtons.tsx  StoreIcon.tsx  StoreRow.tsx  Toast.tsx  TotalCrawlTimeBoxPlotChart.tsx  UptimeHeatmap.tsx  VirtualizedItemGrid.tsx
frontend/src/components/config/: AmazonSearchModal.tsx  CategoriesTab.tsx  CheckItemModal.tsx  ConfigEditorPage.tsx  ConfigTabs.tsx  ItemForm.tsx  ItemsTab.tsx  SaveConfirmModal.tsx  StoreForm.tsx  StoresTab.tsx  XPathInput.tsx  YodobashiSearchModal.tsx
frontend/src/components/icons/: HatenaBookmarkIcon.tsx  LineIcon.tsx  XIcon.tsx
frontend/src/components/priceRecord/: DeleteConfirmModal.tsx  PriceRecordEditorPage.tsx  PriceRecordTable.tsx  index.ts
frontend/src/components/skeletons/: ChartSkeleton.tsx  ItemCardSkeleton.tsx  index.ts
frontend/src/contexts/: FavoritesContext.tsx  SSEContext.tsx  ToastContext.tsx
frontend/src/hooks/: useItems.ts  usePriceTrend.ts  useSearch.ts
frontend/src/services/: apiService.ts  configService.ts  priceRecordService.ts  queryClient.ts
frontend/src/types/: config.ts  index.ts
frontend/src/utils/: dateFormat.ts  formatPrice.ts
schema/: config.schema  sqlite_history.schema  sqlite_metrics.schema  target.schema
scripts/: backfill_events.py  clear_ogp_cache.py  create_test_history_db.py  remove_outlier_prices.py
src/price_watch/: __init__.py  __main__.py  affiliate.py  app_context.py  captcha.py  config.py  const.py  event.py  exceptions.py  file_cache.py  history.py  item.py  log_format.py  metrics.py  models.py  notify.py  processor.py  target.py  thumbnail.py
src/price_watch/amazon/: paapi.py
src/price_watch/cli/: __init__.py  app.py  healthz.py  webui.py
src/price_watch/managers/: __init__.py  browser_manager.py  config_manager.py  history_manager.py  metrics_manager.py
src/price_watch/managers/history/: __init__.py  connection.py  event_repository.py  item_repository.py  migrations.py  price_repository.py  utils.py
src/price_watch/security/: url_guard.py
src/price_watch/store/: __init__.py  amazon_paapi.py  flea_market.py  mercari.py  paapi_rate_limiter.py  rakuten.py  scrape.py  search_filter.py  yahoo.py  yodobashi.py
src/price_watch/store/amazon/: __init__.py  paapi.py
src/price_watch/webapi/: __init__.py  amazon_search.py  auth_rate_limiter.py  cache.py  check_job.py  git_sync.py  ogp.py  page.py  password.py  price_record_editor.py  server.py  target_editor.py  yodobashi_search.py
src/price_watch/webapi/metrics/: __init__.py  heatmap.py
src/price_watch/webapi/schemas/: __init__.py  items.py  target.py
tests/: conftest.py
tests/e2e/: conftest.py  test_webui.py
tests/integration/: __init__.py  test_history.py  test_webapi.py
tests/unit/: test_affiliate.py  test_amazon_paapi.py  test_amazon_paapi_rate_limiter.py  test_app_context.py  test_browser_manager.py  test_captcha.py  test_cli_app.py  test_cli_healthz.py  test_cli_webui.py  test_config.py  test_config_manager.py  test_event.py  test_file_cache.py  test_history.py  test_history_manager.py  test_item.py  test_log_format.py  test_metrics.py  test_metrics_manager.py  test_migrations.py  test_models.py  test_notify.py  test_ogp.py  test_processor.py  test_search_filter.py  test_store_flea_market.py  test_store_mercari.py  test_store_scrape.py  test_store_yahoo.py  test_target.py  test_thumbnail.py  test_webapi_auth_rate_limiter.py  test_webapi_page.py  test_webapi_password.py  test_webapi_server.py
